Added and styled buttons

--- a/index.html
+++ b/index.html
@@ -8,21 +8,37 @@
 
 <body>
   <div class="navbar">
-    <ul>
       <a href="http://www.gmail.com">Gmail</a>
       <a href="https://www.google.com/imghp?hl=en&tab=wi&ei=Eqc1WcynBIHRjAOBpY_4AQ&ved=0EKouCBgoAQ">Images</a>
-      <a>Apps</a>
-      <a>Notifications</a>
-      <a>Account</a>
-    </ul>
+      <a href="https://www.google.com/intl/en/options/">Apps</a>
+      <a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/" class="signin">Sign in</a>
   </div>
+
   <div class="logo">
-  <img src="https://www.google.com/logos/doodles/2017/world-environment-day-5912124340568064.7-law.gif">
-</div>
-<div class="searchbar">
+  <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
+  </div>
+
+  <div class="searchbar">
   <form>
     <input>
   </form>
-</div>
+  </div>
+
+  <div class="buttons">
+  <a href="#" class="button">Google Search</a>
+  <a href="#" class="button">I'm Feeling Lucky</a>
+  </div>
+
+  /* <!-- <footer>
+    <a href="#">Advertising</a>
+    <a href="#">Business</a>
+    <a href="#">About</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    <a href="#">Settings</a>
+  </footer> -->
 </body>
+
+
+
 </html>
