Re-did index.html and style.css from scratch. This is the final version of the Google page assignment

--- a/index.html
+++ b/index.html
@@ -25,18 +25,22 @@
   </div>
 
   <div class="buttons">
-  <a href="#" class="button">Google Search</a>
-  <a href="#" class="button">I'm Feeling Lucky</a>
+    <a href="#" class="button">Google Search</a>
+    <a href="#" class="button">I'm Feeling Lucky</a>
   </div>
 
-  /* <!-- <footer>
-    <a href="#">Advertising</a>
-    <a href="#">Business</a>
-    <a href="#">About</a>
-    <a href="#">Privacy</a>
-    <a href="#">Terms</a>
-    <a href="#">Settings</a>
-  </footer> -->
+  <div class="footer">
+    <div class="foot-l">
+      <a href="#">Advertising</a>
+      <a href="#">Business</a>
+      <a href="#">About</a>
+    </div>
+    <div class="foot-r">
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <a href="#">Settings</a>
+    </div>
+  </div>
 </body>
 
 
